--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="ASCII" />
+    <meta charset="UTF -8" />
     <title>Run Buddy</title>
   </head>
   <body>
-    <h3>RUN BUDDY</h3>
-    What we do 🏃
+    <h1>RUN BUDDY</h1>
+    What We Do You Do Your trainers reach Out
   </body>
 </html>
