html outline and gitignore

--- a/index.html
+++ b/index.html
@@ -5,7 +5,37 @@
     <title>Run Buddy</title>
   </head>
   <body>
-    <h1>RUN BUDDY</h1>
-    What We Do You Do Your trainers reach Out
+    <!--navigation-->
+    <header>
+      <h1>RUN BUDDY</h1>
+    </header>
+
+    <!--hero/jumbotron-->
+    <section></section>
+
+    <!--"What we do" section-->
+    <section>
+      <h2>What We Do</h2>
+    </section>
+
+    <!-- "what you do" section-->
+    <section>
+      <h2>What You Do</h2>
+    </section>
+
+    <!-- "meet the Trainers" section -->
+    <section>
+      <h2>Meet The Trainers</h2>
+    </section>
+
+    <!-- "reach out" section-->
+    <section>
+      <h2>reach Out</h2>
+    </section>
+
+    <!-- footer -->
+    <footer>
+      <h2>❤️ Made with love by Run Buddy.</h2>
+    </footer>
   </body>
 </html>
